django-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app  
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
  # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30007
