django-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app
spec:
  rules:
  - host: "kube.com"
    http:
      paths:
      - pathType: Prefix
        path: "/path"
        backend:
          service:
            name: django-app
            port:
              number: 8000
